# cs529-ai-project1

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_pdf_first_chat.py  0001_initial.py  0002_drop_tpl_schema_json.py  0002_resume_templates_outputs.py  0003_resume_templates_latex_source.py  0003_resume_templates_valid.py  0004_agent_sessions_openai_conversation_id.py  0004_drop_agent_runs.py  0005_outputs_session_null.py  0005_resume_templates_db_only_latex.py  0006_interview_practice_tables.py  0006_resume_outputs_template_id_nullable.py  0007_resume_templates_uuid_pk.py  0007_unique_answer_per_question.py  0008_change_main_class_to_common_class_change_main_class_to_common_class.py  0009_resume_upload_storage.py  0010_job_descriptions_drop_session_id.py  0011_scope_previous_response_id.py
backend/app/: main.py
backend/app/core/: config.py  errors.py  logging.py  middleware_logging.py
backend/app/db/: base.py  session.py
backend/app/domain/: __init__.py
backend/crewai_runner/: crewai_mcp_support.py
backend/docs/: ARCHITECTURE.md  DEPENDENCY_MAP.md  NEXT_REFACTOR_PDF_AGENT.md
backend/tests/: conftest.py  test_healthz.py  test_latex_compile_summary.py  test_orchestrator.py  test_resume_extract.py  test_resume_template_fix.py  test_resume_template_generate_stream.py  test_resume_template_valid_save.py  test_resume_template_validate.py
worker/: Dockerfile  pyproject.toml
worker/app/: chat_reply_notify.py  config.py  db.py  intent_classifier.py  latex_client.py  logging.py  models.py  openai_client.py  openai_resume_fill.py  orchestrator_router.py  queue.py  render_resume.py  tex_renderer.py  worker.py
(+242 files in other folders)
