[tool.poetry]
name = "resume-agent-backend"
version = "0.1.0"
description = "FastAPI backend for AI Resume Agent platform"
authors = ["cs529"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
python-multipart = "^0.0.9"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
structlog = "^24.4.0"
redis = "^5.0.0"
tenacity = "^9.0.0"
httpx = "^0.27.0"
openai = "^2.29.0"
pypdf = "^5.1.0"
python-docx = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.0"
greenlet = "^3.0.0"
watchfiles = "^1.0.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

