[tool.poetry]
name = "resume-agent-worker"
version = "0.1.0"
description = "Background worker for AI Resume Agent platform"
authors = ["cs529"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
redis = "^5.0.0"
tenacity = "^9.0.0"
structlog = "^24.4.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.4.0"
openai = "^1.0.0"
httpx = "^0.27.0"
watchfiles = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

